--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,18 @@
 <html lang="en">
 <head>
 
-  <title>New document</title>
+  <title>Currency Exchange</title>
 </head>
 <body>
-  <h1>New Document</h1>
-  <script type="text/javascript" src="bundle.js"></script>
+  <div class="container">
+    <form>
+      <h1>Currency Exchange</h1>
+      <h2>Enter US Dollar Amount</h2>
+      <label for="inputdollar">$</label>
+      <input id="dollar" type="number">
+      <h3 id="exchange"></h3>
+      <button id="button" type="submit" class="btn btn-dark">Submit</button>
+    </form>
+  </div>
 </body>
 </html>
