add radio buttons to select type of exchange

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,22 @@
       <h2>Enter US Dollar Amount</h2>
       <label for="inputdollar">$</label>
       <input id="dollar" type="number">
+      <p><strong>Select currency type:</strong></p>
+      <label for="answer1">AED</label>
+      <input type="radio" name="question#1" value="AED" checked>
+
+      <label for="answer2">AFN</label>
+      <input type="radio" name="question#1" value="AFN">
+
+      <label for="answer3">ALL</label>
+      <input type="radio" name="question#1" value="ALL">
+
+      <label for="answer4">AMD</label>
+      <input type="radio" name="question#1" value="AMD">
+
+      <label for="answer5">ANG</label>
+      <input type="radio" name="question#1" value="ANG">
+
       <h3 id="exchange"></h3>
       <button id="button" type="submit" class="btn btn-dark">Submit</button>
     </form>
