WIP calculate currency exchange

--- a/src/index.html
+++ b/src/index.html
@@ -16,13 +16,13 @@
 
       <select name="currency" id="currency-selection">
           <option value="">--Select Currency--</option>
-          <option value="AED">AED</option>
-          <option value="AFN">AFN</option>
-          <option value="ALL">ALL</option>
-          <option value="AMD">AMD</option>
-          <option value="ANG">ANG</option>
+          <option value="AED">United Arab Emirates Dirham - AED</option>
+          <option value="AFN">Afghani - AFN</option>
+          <option value="ALL">Albanian lek - ALL</option>
+          <option value="AMD">Armenian Dram - AMD</option>
+          <option value="ANG">Netherlands Antillean Guilder -ANG</option>
       </select>
-      <p id="exchange">test</p>
+      <p id="exchange"></p>
       <button id="button" type="submit" class="btn btn-dark">Submit</button>
     </form>
   </div>
